--- a/client/src/index.css
+++ b/client/src/index.css
@@ -161,3 +161,15 @@ h1 {
 .dark .input-field:focus {
   border-color: #818cf8; /* Lighter indigo */
 }
+
+.text-gradient{
+  /* background-image: linear-gradient(to right, #f8ab5e 0, #f36961 20%, #a176c8 40%, #759beb 60%, #65beb3 80%, #70db96 100%); */
+  background-image: linear-gradient(108deg, #006bb9 0, #903fcf 32%, #cf0f3c 84%, #b84100 100%);
+  background-clip: inherit;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.triangle{
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
