--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,14 +18,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* a {
+.active-link {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+.active-link:hover {
   color: #535bf2;
-} */
+}
 
 /* body {
   margin: 0;
