--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
 :root {
   /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
@@ -10,12 +9,13 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #d2d2d2;
-  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  scroll-behavior: smooth;
 }
 
 .active-link {
@@ -43,6 +43,17 @@ h1 {
 
 
 .btn {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+} 
+.btn-2 {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -132,7 +143,7 @@ h1 {
 :root {   /*for light mode */
   color: #213547;
   background-color: #E2E8F0;
-  .btn, .stat-btn {
+  .btn, .btn-2, .stat-btn {
     background-color: #94A3B8;
   }
   .btn-copy {
@@ -144,6 +155,10 @@ h1 {
   background-color: #1a1a1a;
   .btn, .stat-btn {
     background-color: #322f2f;
+    /* background-color: #151414; */
+  }
+  .btn-2{
+    background-color: #1c1c1c;
   }
 }
 
@@ -261,7 +276,9 @@ for text use (group-hover:text-black dark:group-hover:text-white) */
   transition: all 0.3s ease-in-out;
 }
 .card-effect-border:hover {
-  border-color: #60a5fa; 
+  /* border-color: #60a5fa;  */
+  border-image: linear-gradient(90deg, #e63946, #f1fa8c, #2a9d8f, #457b9d) 1;
+  border-radius: 1em;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
               0 10px 10px -5px rgba(0, 0, 0, 0.04); /* shadow-xl */
   transform: translateY(-0.5rem); /* -translate-y-2 */
